@@ -221,6 +221,7 @@ Version 1.5
  - Add Aeotec ZWA002 LED Bulb 6 Multi-Color (Nechry)
  - Add Zipato PAN04 Micro Module Switch Double (Nechry)
  - Add Aeotec ZW141 Nano Shutter (Nechry)
+ - Add Popp 700045 Universal Keypad (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
